# compression-algorithm-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
compression_evaluation/: __init__.py  classes.py  distributions.py  evaluator.py  methods.py  types.py
notebook/: ans.ipynb
notebooks/: ans.ipynb  bpc-with-ans.ipynb  dataset_creation.ipynb  lpc-with-ans.ipynb  neural-network.ipynb  tans.ipynb  tkan.ipynb
notebooks/old_notebooks/: LPC_encoder_and_full_sync.ipynb  T-KAN_Predictive_Encoder_Sample.ipynb
test/: lrq-method-test.py  pc-test.py  quantizer-test.py  static-ans-test.py
util/: classes.py  evaluator.py  methods.py  types.py
