[project]
name = "compression-evaluation"
version = "0.1.0"
description = "Package used to evaluate compression algorithms, specifically predictive coding algorithms that use ANS for compression"
authors = [
    {name = "AthulyaWeerakoon",email = "55914834+AthulyaWeerakoon@users.noreply.github.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "memory-profiler (>=0.61.0,<0.62.0)",
    "numpy (>=2.3.2,<3.0.0)",
]

[project.settings]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
