[tool.poetry]
name = "compression-evaluation"
version = "0.1.0"
description = "Package used to evaluate compression algorithms, specifically predictive coding algorithms that use ANS for compression"
authors = [
    "Athulya Weerakoon <athulyaweerakoon@gmail.com>",
    "Arosh Upathilak <aroshupathilak@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "compression_evaluation"}]

[tool.poetry.dependencies]
python = ">=3.12"
memory-profiler = "^0.61.0"
numpy = ">=2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
